--- a/src/css/styleEditarPerfil.css
+++ b/src/css/styleEditarPerfil.css
@@ -1,7 +1,7 @@
 /*Imagen de fondo de pantalla con un cover para que quede completa la imagen*/
 body{
     background-color: #0f1316;
-    background-image: url("images/libreria.jpg");
+    background-image: url("../img/libreria.jpg");
     background-repeat: no-repeat;
     background-size: cover; 
 }
