--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,65 +1,95 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-
+/*Se definen variables para los colores*/
+:root{
+    --color-dark: #15181f;
+    --color-dark-x: #2d343f;
+    --color-dark-xx: #1f232b;
+    --color-light: #ffffff;
+    --color-grey: #f5f6f8;
+}
+/*Se define la letra que estara en la pagina, los tamaños y colores*/
 body{
-    font-family: 'Monstserrat', sans-serif;
-    overflow-x: hidden;
-
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.1rem;
+    font-weight: 300;
+    background-color: var(--color-grey);
+    color: var(--color-light);
+    letter-spacing: .05rem;
 }
 
-#menu a{
-    font-size: 18px;
-    font-weight: bold;
-    color: #3f3f3f;
+/*color pagina*/
+.bg-light{
+    background-color: var(--color-light)!important;
 }
 
-#menu button {
-    font-size: 18px;
-    font-weight: bold;
-   
+/*color pagina*/
+.bg-dark{
+    background-color: var(--color-dark)!important;
 }
 
-/*IMAGENES*/
-
-.carousel-inner {
-    max-height: 39rem;
+/*el padding para el espaciado en las secciones de la pagina, la parte derecha donde esta el formulario lo deja bien ordenado*/
+.p-6{
+    padding: 4rem 7rem;
+}
+/*el padding para el espaciado en las secciones de la pagina, es el cuadro blanco que esta en la pagina*/
+.contact-box{
+    padding: 3rem;
 }
 
-/*Pantalla mediana*/
+/*tamaño boton*/
+.btn {
+    font-weight: 400;
+    padding: 1rem 2rem;
+    border-radius: 5rem;
+    min-width: 10rem;
+}
 
-@media (max-width:768px) {
-    #intro {
-        width: 90% !important;
+
+/*color de los botnoes google y facebook*/
+.btn-outline-dark{
+    border: 2px solid var(--color-dark-xx);    
+}
+
+/*color del placeholder osea de la casilla*/
+.form-control{
+    background-color: var(--color-dark-xx);
+    border: 2px solid var(--color-dark-xx);
+    border-radius: .2rem;
+    padding: 0.6rem 1rem;
+}
+
+.register-bg{
+    background-image: url('src/img/img2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+}
+
+/*pocisionamiento letra de la foto*/
+.testimonial{
+    bottom: 10px;
+}
+
+.iniciasesion:hover{
+    text-decoration:none;
+}
+
+
+/*contenido visible en moviles*/
+@media (max-width: 575.98px){
+    .p-6{
+        padding: 2rem;
+    }
+    .contact-box{
+        padding: 0;
     }
 
-    .servicio-fila {
-        width: 100% !important;
-        text-align: center;
-    }
-
-  
-}
-
-
-
-/*Pantalla mediana*/
-
-@media (max-width:576px) {
-    
-
-    .icono-wrap {
-        flex-wrap: wrap;
-        justify-content: center !important;
+    .width-100{
+        width: 100%;
     }
 }
-
-/*Background*/
-#bg-contacto{
-    position: relative;
-    top: -130px;
-}
-
-#seccion-contacto{
-    background-color:rgb(240, 238, 238);
-    min-height: 500px;
-    position: relative;
+/*tamaño imagen en moviles*/
+@media (max-width: 1200px){
+    .register-bg{
+        min-height: 50vh;
+    }
 }
