--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,7 +12,7 @@ body{
     font-size: 1.1rem;
     font-weight: 300;
     background-color: var(--color-grey);
-    color: var(--color-light);
+    /*color: var(--color-light);*/
     letter-spacing: .05rem;
 }
 
