--- a/src/css/main2.css
+++ b/src/css/main2.css
@@ -12,7 +12,7 @@ body{
     font-size: 1.1rem;
     font-weight: 300;
     background-color: var(--color-grey);
-    /*color: var(--color-light);*/
+    color: var(--color-light);
     letter-spacing: .05rem;
 }
 
@@ -58,7 +58,7 @@ body{
 }
 
 .register-bg{
-    background-image: url('src/img/img2.jpg');
+    background-image: url('../img/img2.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
